Remove unneeded arguments